--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^5.1.3",
     "cz-conventional-changelog": "^2.1.0",
     "directory-named-webpack-plugin": "^2.3.0",
+    "easywebpack-cli": "^3.6.1",
     "easywebpack-vue": "^3.6.0",
     "egg-bin": "^4.3.5",
     "egg-ci": "^1.8.0",
@@ -43,6 +44,7 @@
     "less-loader": "^4.0.5",
     "progress-bar-webpack-plugin": "^1.10.0",
     "vue-template-compiler": "^2.5.13",
+    "webpack-manifest-plugin": "^1.3.2",
     "webpack-manifest-resource-plugin": "^2.0.2",
     "webstorm-disable-index": "^1.2.0"
   },
