perf: Add styles file

--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-loader": "^7.1.2",
-    "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0",
-    "egg-view-vue": "^1.0.0",
+    "component": "^1.1.0",
+    "easywebpack-vue": "^3.6.0",
+    "egg": "^2.3.0",
+    "egg-scripts": "^2.5.1",
     "egg-view-vue-ssr": "^3.0.6",
+    "egg-webpack": "^3.3.2",
+    "egg-webpack-vue": "^2.0.1",
     "vue": "^2.5.13",
-    "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.13"
   },
   "devDependencies": {
     "autod": "^3.0.1",
-    "autod-egg": "^1.0.0",
+    "autod-egg": "^1.1.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -30,12 +32,12 @@
     "directory-named-webpack-plugin": "^2.3.0",
     "easywebpack-cli": "^3.6.1",
     "easywebpack-vue": "^3.6.0",
-    "egg-bin": "^4.3.5",
+    "egg-bin": "^4.3.7",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.14.0",
     "egg-webpack": "^3.3.2",
     "egg-webpack-vue": "^2.0.1",
-    "eslint": "^4.11.0",
+    "eslint": "^4.17.0",
     "eslint-config-egg": "^6.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-vue": "^4.2.2",
