--- a/package.json
+++ b/package.json
@@ -5,27 +5,25 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
-    "babel-loader": "^7.1.2",
-    "component": "^1.1.0",
-    "easywebpack-vue": "^3.6.0",
     "egg": "^2.3.0",
     "egg-scripts": "^2.5.1",
     "egg-view-vue-ssr": "^3.0.6",
-    "egg-webpack": "^3.3.2",
-    "egg-webpack-vue": "^2.0.1",
+    "server-side-render-resource": "^1.0.3",
     "vue": "^2.5.13",
-    "vue-server-renderer": "^2.5.13"
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.13",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
     "cz-conventional-changelog": "^2.1.0",
@@ -54,7 +52,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "stop": "egg-scripts stop --title=egg-server-TeanBlog",
+    "stop": "egg-scripts stop --title=egg-server-teanblog",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
