--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "imagemin-webpack-plugin": "^2.0.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "postcss-loader": "^2.1.0",
     "progress-bar-webpack-plugin": "^1.10.0",
     "vue-template-compiler": "^2.5.13",
     "webpack-manifest-plugin": "^1.3.2",
