refactor: Use .tpl for index and Vue.js for admin

--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "axios": "^0.17.1",
     "egg": "^2.3.0",
     "egg-scripts": "^2.5.1",
+    "egg-sequelize": "^3.1.1",
+    "egg-view-nunjucks": "^2.1.4",
     "egg-view-vue-ssr": "^3.0.6",
     "gitalk": "^1.2.2",
+    "iview": "^2.9.2",
+    "mysql2": "^1.5.2",
     "server-side-render-resource": "^1.0.3",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
@@ -22,6 +26,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-import": "^1.6.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -41,6 +46,7 @@
     "eslint-loader": "^1.9.0",
     "eslint-plugin-vue": "^4.2.2",
     "imagemin-webpack-plugin": "^2.0.0",
+    "iview-loader": "^1.1.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "postcss-loader": "^2.1.0",
@@ -54,6 +60,9 @@
     "node": ">=8.9.0"
   },
   "scripts": {
+    "migrate:new": "egg-sequelize migration:create",
+    "migrate:up": "egg-sequelize db:migrate",
+    "migrate:down": "egg-sequelize db:migrate:undo",
     "stop": "egg-scripts stop --title=egg-server-teanblog",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
