fix: Fix webpack build path

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ coverage/
 .idea/
 app/view/*
 !app/view/render
+app/public/*
+!app/public/render
 public/
 config/config.local.js
 config/manifest.json
