--- a/.eslintrc
+++ b/.eslintrc
@@ -1,79 +1,3 @@
 {
-  "extends": "eslint-config-egg",
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module"
-  },
-  "rules": {
-    "curly": 2,
-    "eqeqeq": 2,
-    "indent": 2,
-    "use-isnan": 2,
-    "camelcase": 2,
-    "brace-style": 2,
-    "no-redeclare": 2,
-    "default-case": 2,
-    "no-unused-vars": 2,
-    "no-else-return": 2,
-    "linebreak-style": 2,
-    "no-empty-function": 2,
-    "array-bracket-spacing": 2,
-    "no-multiple-empty-lines": 2,
-    "arrow-parens": "off",
-    "valid-jsdoc": "off",
-    "eol-last": "off",
-    "strict": "off",
-    "semi": [
-      "error",
-      "always"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "no-irregular-whitespace": [
-      "error",
-      {
-        "skipComments": true
-      }
-    ],
-    "key-spacing": [
-      "error",
-      {
-        "beforeColon": false,
-        "afterColon": true,
-        "align": "value"
-      }
-    ],
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "only-multiline",
-        "objects": "only-multiline"
-      }
-    ],
-    "space-before-function-paren": [
-      "error",
-      {
-        "anonymous": "always",
-        "named": "never"
-      }
-    ]
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "commonjs": true,
-    "jquery": true,
-    "es6": true
-  },
-  "globals": {
-    "EASY_ENV_IS_PROD": true,
-    "EASY_ENV_IS_NODE": true,
-    "EASY_ENV_IS_BROWSER": true
-  },
-  "plugins": [
-    "vue"
-  ],
-  "parser": "babel-eslint"
+  "extends": "eslint-config-egg"
 }
