--- a/package.json
+++ b/package.json
@@ -7,79 +7,47 @@
     "axios": "^0.17.1",
     "egg": "^2.3.0",
     "egg-scripts": "^2.5.1",
-    "egg-sequelize": "^3.1.1",
     "egg-view-nunjucks": "^2.1.4",
-    "egg-view-vue-ssr": "^3.0.6",
-    "gitalk": "^1.2.2",
-    "iview": "^2.9.2",
-    "mysql2": "^1.5.2",
-    "server-side-render-resource": "^1.0.3",
     "vue": "^2.5.13",
-    "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.13",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-import": "^1.6.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.3",
+    "autoprefixer": "^8.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "cz-conventional-changelog": "^2.1.0",
-    "directory-named-webpack-plugin": "^2.3.0",
-    "easywebpack-cli": "^3.6.1",
-    "easywebpack-vue": "^3.6.0",
     "egg-bin": "^4.3.7",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.14.0",
-    "egg-webpack": "^3.3.2",
-    "egg-webpack-vue": "^2.0.1",
     "eslint": "^4.17.0",
     "eslint-config-egg": "^6.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-vue": "^4.2.2",
-    "imagemin-webpack-plugin": "^2.0.0",
-    "iview-loader": "^1.1.0",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "postcss-loader": "^2.1.0",
-    "progress-bar-webpack-plugin": "^1.10.0",
+    "parcel-bundler": "^1.6.1",
+    "parcel-plugin-vue": "^1.5.0",
+    "postcss-modules": "^1.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.13",
-    "webpack-manifest-plugin": "^1.3.2",
-    "webpack-manifest-resource-plugin": "^2.0.2",
     "webstorm-disable-index": "^1.2.0"
   },
   "engines": {
     "node": ">=8.9.0"
   },
   "scripts": {
-    "migrate:new": "egg-sequelize migration:create",
-    "migrate:up": "egg-sequelize db:migrate",
-    "migrate:down": "egg-sequelize db:migrate:undo",
+    "start": "egg-scripts start --daemon --port=8003 --title=egg-server-teanblog",
+    "build": "parcel build app/web/index.html --no-cache --public-url ./",
     "stop": "egg-scripts stop --title=egg-server-teanblog",
+    "dev:index": "egg-bin dev",
+    "dev:admin": "parcel app/web/index.html",
+    "debug": "egg-bin debug",
+    "fix": "npm run lint -- --fix",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
-    "ci": "npm run lint && npm run cov",
-    "autod": "autod",
-    "debug": "egg-bin debug",
-    "build": "cross-env easy clean && easy build prod",
-    "build:dev": "cross-env easy clean && easy build dev",
-    "build:test": "cross-env easy clean && easy build test",
-    "build:prod": "cross-env easy clean && easy build prod",
-    "start": "node index.js --daemon",
-    "dev": "node index.js",
-    "start:test": "cross-env EGG_SERVER_ENV=test node index.js",
-    "start:prod": "cross-env EGG_SERVER_ENV=prod NODE_ENV=production npm start",
     "lint": "eslint .",
-    "fix": "eslint --fix ."
+    "ci": "npm run lint && npm run cov",
+    "autod": "autod"
   },
   "ci": {
     "version": "8"
