--- a/package.json
+++ b/package.json
@@ -4,42 +4,40 @@
   "description": "A minimalist style blog based on Egg.js & Vue.js",
   "private": true,
   "dependencies": {
-    "axios": "^0.17.1",
+    "bcrypt": "^1.0.3",
     "egg": "^2.3.0",
     "egg-scripts": "^2.5.1",
+    "egg-sequelize": "^3.1.1",
     "egg-view-nunjucks": "^2.1.4",
-    "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
+    "mysql2": "^1.5.2",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
-    "autoprefixer": "^8.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
     "cz-conventional-changelog": "^2.1.0",
     "egg-bin": "^4.3.7",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.14.0",
     "eslint": "^4.17.0",
     "eslint-config-egg": "^6.0.0",
-    "parcel-bundler": "^1.6.1",
-    "parcel-plugin-vue": "^1.5.0",
-    "postcss-modules": "^1.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.13",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.5.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rev": "^8.1.1",
+    "gulp-rev-collector": "^1.2.4",
     "webstorm-disable-index": "^1.2.0"
   },
   "engines": {
     "node": ">=8.9.0"
   },
   "scripts": {
+    "migrate:new": "egg-sequelize migration:create --name create-admin",
+    "migrate:up": "egg-sequelize db:migrate --name",
+    "migrate:down": "egg-sequelize db:migrate:undo --name",
     "start": "egg-scripts start --daemon --port=8003 --title=egg-server-teanblog",
-    "build": "parcel build app/web/index.html --no-cache --public-url ./",
     "stop": "egg-scripts stop --title=egg-server-teanblog",
-    "dev:index": "egg-bin dev",
-    "dev:admin": "parcel app/web/index.html",
+    "dev": "egg-bin dev --port=8003",
     "debug": "egg-bin debug",
     "fix": "npm run lint -- --fix",
     "test": "npm run lint -- --fix && npm run test-local",
