--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "egg-scripts": "^2.5.1",
     "egg-sequelize": "^3.1.1",
     "egg-view-nunjucks": "^2.1.4",
+    "jsonwebtoken": "^8.1.1",
+    "koa-jwt": "^3.3.0",
     "mysql2": "^1.5.2",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "cz-conventional-changelog": "^2.1.0",
     "egg-bin": "^4.3.7",
     "egg-ci": "^1.8.0",
@@ -22,10 +26,12 @@
     "eslint": "^4.17.0",
     "eslint-config-egg": "^6.0.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-less": "^3.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-rev": "^8.1.1",
     "gulp-rev-collector": "^1.2.4",
+    "gulp-uglify": "^3.0.0",
     "webstorm-disable-index": "^1.2.0"
   },
   "engines": {
