feat: Add article controller

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "koa-jwt": "^3.3.0",
     "ms": "^2.1.1",
     "mysql2": "^1.5.2",
-    "uuid": "^3.2.1"
+    "uniqid": "^4.1.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
