--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg-view-nunjucks": "^2.1.4",
     "jsonwebtoken": "^8.1.1",
     "koa-jwt": "^3.3.0",
+    "moment": "^2.20.1",
     "ms": "^2.1.1",
     "mysql2": "^1.5.2",
     "uniqid": "^4.1.1"
