--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "egg": "^2.3.0",
     "egg-scripts": "^2.5.1",
     "egg-sequelize": "^3.1.1",
+    "egg-validate": "^1.0.0",
     "egg-view-nunjucks": "^2.1.4",
     "jsonwebtoken": "^8.1.1",
     "koa-jwt": "^3.3.0",
