--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,9 @@ yarn-error.log
 node_modules/
 package-lock.json
 yarn.lock
-coverage/
 .idea/
 /public/
 migrations/
-config/config.local.js
 config/manifest.json
 config/buildConfig.json
 run/
@@ -16,4 +14,4 @@ run/
 *.sw*
 *.un~
 .cache/
-dist/
+config.local.yml
