--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TeanLee/TeanBlog"
+    "url": "https://github.com/TeanBlog/TeanBlog"
   },
   "author": "TeanLee",
   "license": "MIT",
